add fixed add product form

--- a/src/main/resources/static/src/stylus/common/defaults.styl
+++ b/src/main/resources/static/src/stylus/common/defaults.styl
@@ -80,6 +80,14 @@ a {
     }
   }
 
+  &.-tiny {
+    padding: 0;
+    width: 10vw;
+    height: 5vh;
+    border: rem(1) solid white;
+    font-size: rem(16);
+  }
+
   &.-extra {
     padding: 0;
     width: 14vw;
