--- a/src/main/resources/templates/admin/addproduct.html
+++ b/src/main/resources/templates/admin/addproduct.html
@@ -9,44 +9,45 @@
         <div class="main">
             <div class="container">
                 <div class="wrapper">
-                    <div class="products__container">
-                            <form autocomplete="off" action="#" th:action="@{/admin/addproduct}" th:object="${product}"
+                    <div class="products__container -dashboard">
+                        <form autocomplete="off" action="#" th:action="@{/admin/addproduct}" th:object="${product}"
                             method="post" class="form-add-product" role="form">
-                            <div class="form-add-product__group">
-                                <input type="text" th:field="*{id}" placeholder="Product barcode" class="form-control" />
-                                <label th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="validation-message"></label>
+                            <div class="form-add-product__wrapper">
+                                <div class="form-add-product__group">
+                                    <input type="text" th:field="*{id}" placeholder="Product barcode" class="form-add-product__input" />
+                                    <label th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="validation-message"></label>
+                                </div>
+                                <div class="form-add-product__group">
+                                    <label th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="validation-message"></label>
+                                    <input type="text" th:field="*{name}" placeholder="Name of the product" class="form-add-product__input" />
+                                </div>
+
+                                <div class="form-add-product__group">
+                                    <label th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}" class="validation-message"></label>
+                                    <input type="text" th:field="*{stock}" placeholder="Stock available" class="form-add-product__input" />
+                                </div>
+                                <div class="form-add-product__group">
+                                    <input th:field="*{price}" placeholder="Price" class="form-add-product__input" />
+                                    <label th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="validation-message"></label>
+                                </div>
+
+                                <div class="form-add-product__group">
+                                    <input id="imageUUID" type="hidden" th:field="*{image}" />
+                                    <input id="imageSelect" type="file" accept="image/png, image/jpeg" placeholder="Image"
+                                        class="form-add-product__input" />
+                                    <label th:if="${#fields.hasErrors('image')}" th:errors="*{image}" class="validation-message"></label>
+                                </div>
+
+                                <div class="form-add-product__group">
+                                    <button type="submit" class="btn -tiny">Add Product</button>
+                                </div>
                             </div>
-                            <div class="form-add-product__group">
-                                <label th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="validation-message"></label>
-                                <input type="text" th:field="*{name}" placeholder="Name of the product" class="form-control" />
-                            </div>
-    
-                            <div class="form-add-product__group">
-                                <label th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}" class="validation-message"></label>
-                                <input type="text" th:field="*{stock}" placeholder="Stock available" class="form-control" />
-                            </div>
-                            <div class="form-add-product__group">
-                                <input th:field="*{price}" placeholder="Price" class="form-control" /> <label th:if="${#fields.hasErrors('price')}"
-                                    th:errors="*{price}" class="validation-message"></label>
-                            </div>
-    
-                            <div class="form-add-product__group">
-                                <input id="imageUUID" type="hidden" th:field="*{image}" />
-                                <input id="imageSelect" type="file" accept="image/png, image/jpeg" placeholder="Image"
-                                    class="form-control" />
-                                <label th:if="${#fields.hasErrors('image')}" th:errors="*{image}" class="validation-message"></label>
-                            </div>
-    
-                            <div class="form-add-product__group">
-                                <button type="submit" class="btn btn-primary btn-block">Register Product</button>
-                            </div>
-    
                             <span th:utext="${successMessage}"></span>
-    
-    
+
+
                         </form>
 
-                        <ul class="products__list">
+                        <ul class="products__list -dashboard">
                             <li class="product">
                                 <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
                                 <div class="product__data">
