--- a/src/main/resources/static/src/stylus/modules/form-add-product.styl
+++ b/src/main/resources/static/src/stylus/modules/form-add-product.styl
@@ -5,22 +5,18 @@
     z-index: 99;
     padding-top: rem(14);
 
+    &__input {
+        font-size: rem(16);
+        padding: rem(10) 0;
+        text-align: center;
+        border: none;
+        border-bottom: rem(1) solid $color-4;
+    }
+
     &__wrapper {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding-bottom: rem(10);
-    }
-
-    &::after {
-       content: '';
-        display: block;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: rem(1);
-        background-color: $color-9;
-        opacity: 0.3; 
     }
 }
