Add keypad function to input numbers.

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,5 @@
 <div th:fragment="footer">
 <script th:src="@{/build/js/main.js}"></script>
 <script th:src="@{/build/js/sale.js}"></script>
+<script th:src="@{/build/js/keypad.js}"></script>
 </div>
