--- a/src/main/resources/templates/sale.html
+++ b/src/main/resources/templates/sale.html
@@ -47,27 +47,27 @@
             </div>
             <div class="keypad">
                 <form action="" class="keypad__form">
-                    <input class="keypad__display" type="text" name="keypad-display">
+                    <input class="keypad__display js-display" type="text" name="keypad-display">
                     <div class="keypad__container">
                         <div class="numbers-container">
                             <div class="row">
-                                <button class="btn -small">7</button>
-                                <button class="btn -small">8</button>
-                                <button class="btn -small">9</button>
+                                <button class="btn -small js-key">7</button>
+                                <button class="btn -small js-key">8</button>
+                                <button class="btn -small js-key">9</button>
                             </div>
                             <div class="row">
-                                <button class="btn -small">4</button>
-                                <button class="btn -small">5</button>
-                                <button class="btn -small">6</button>
+                                <button class="btn -small js-key">4</button>
+                                <button class="btn -small js-key">5</button>
+                                <button class="btn -small js-key">6</button>
                             </div>
                             <div class="row">
-                                <button class="btn -small">1</button>
-                                <button class="btn -small">2</button>
-                                <button class="btn -small">3</button>
+                                <button class="btn -small js-key">1</button>
+                                <button class="btn -small js-key">2</button>
+                                <button class="btn -small js-key">3</button>
                             </div>
                             <div class="row">
-                                <button class="btn -extra">0</button>
-                                <button class="btn -small">.</button>
+                                <button class="btn -extra js-key">0</button>
+                                <button class="btn -small js-key">.</button>
                             </div>
                         </div>
                         <div class="functions-container">
