--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -13,6 +13,11 @@
                     <p class="item__title">New Sale</p>
                 </a>
             </li>
+            <li class="list__item">
+                <a href="/allProducts" class="item__link js-new-sale">
+                    <p class="item__title">ALL PRODUCTS</p>
+                </a>
+            </li>
         </ul>
     </nav>
     <a href="/login">
