--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,7 @@
     <nav class="navigation">
         <ul class="navigation__list">
             <li class="list__item">
-                <a href="/admin/addproduct" class="item__link js-dash">
+                <a href="/dashboard" class="item__link js-dash">
                     <i class="item__icon fas fa-chart-bar"></i>
                     <p class="item__title">Dashboard</p>
                 </a>
