Add checkout link on sale

--- a/src/main/resources/templates/sale.html
+++ b/src/main/resources/templates/sale.html
@@ -116,7 +116,9 @@
                     <p class="total__label">Total</p>
                     <p class="total__value" th:text="${finalPrice}? ${finalPrice}+' RON': '0 RON'"/>
                 </div>
-                <button class="btn btn-confirm">Confirm</button>
+                <a href="/checkout">
+                    <button class="btn btn-confirm">Confirm</button>
+                </a>
             </div>
         </div>
     </div>
