Change name of functions. Errors not showing when inputting wrong quantity/price for new product.

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="wrapper">
                 <div class="products__container -dashboard">
-                    <form autocomplete="off" action="#" th:action="@{dashboard}" th:object="${product}"
+                    <form autocomplete="off" action="#" th:action="@{admin/addNewProduct}" th:object="${product}"
                           method="post" class="form-add-product" role="form">
                         <div class="form-add-product__wrapper">
                             <div class="form-add-product__group">
