--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,8 +27,7 @@
 
         <div class="login__footer">
             <div class="login__container">
-                <button type="button" onclick="document.getElementById('modal').style.display='none'"
-                        class="btn btn-delete -huge">Cancel</button>       
+                <button type="button" class="btn btn-delete -huge">Cancel</button>       
                 <span class="psw">Forgot <a href="#">password?</a></span>
             </div>
         </div>
