add Del functionality

--- a/src/main/resources/templates/sale.html
+++ b/src/main/resources/templates/sale.html
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <div class="functions-container">
-                            <button class="btn btn-delete -small">Del</button>
+                            <button class="btn btn-delete -small js-key-del">Del</button>
                             <button type="button" class="btn btn-confirm -extra js-btn-search">Ent</button>
                         </div>
                     </div>
