--- a/src/main/resources/static/src/stylus/modules/login.styl
+++ b/src/main/resources/static/src/stylus/modules/login.styl
@@ -43,6 +43,34 @@
         &:last-of-type{
             margin-top: 0;
         }
+
+        &-image {
+            width: rem(0.1);
+            height: rem(0.1);
+            opacity: 0;
+            overflow: hidden;
+            position: absolute;
+            z-index: -1;
+
+            &-label {
+                width: 100%;
+                padding: rem(8) 0;
+                margin-bottom: rem(10);
+                text-align: center;
+                font-size: rem(24);
+                color: #777;
+                background: none;
+                border: rem(1) solid #ccc;
+                display: inline-block;
+                cursor: pointer;
+                transition: transition-custom($property = all);
+
+                &:hover {
+                    color: $color-4;
+                    border: rem(1) solid $color-3;
+                }
+            }
+        }
     }
 
     &__check {
