--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,4 +2,5 @@
 <script th:src="@{/build/js/main.js}"></script>
 <script th:src="@{/build/js/sale.js}"></script>
 <script th:src="@{/build/js/keypad.js}"></script>
+<script th:src="@{/build/js/imageInput.js}"></script>
 </div>
