--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -27,7 +27,10 @@
                     <input type="password" th:field="*{password}" placeholder="Password" class="login__input" /> <label
                         th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message"></label>
                 </div>
-
+                <div class="form-group">
+                    <input class="login__input-image" id="imageSelect" type="file" accept="image/png, image/jpeg" placeholder="Image"/>
+                    <label class="login__input-image-label" for="imageSelect"><span>Choose image</span></label>
+                </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-confirm">Register User</button>
                 </div>
