--- a/src/main/resources/templates/sale.html
+++ b/src/main/resources/templates/sale.html
@@ -61,13 +61,13 @@
                     <div class="modal" id="js-check-coupon">
                         <button class="close-button" onclick="document.getElementById('js-check-coupon').style.display='none'" >Close</button>
                         <div class="modal__content">
-                            <form class="modal__form" action="" method="post">
+                            <div class="modal__form">
                                 <input class="modal__input" name="coupon-code" type="text" placeholder="Insert Coupon Code" required>
                                 <div class="modal__action-wrapper">
-                                    <button class="btn -small js-check">Check</button>
-                                    <button class="btn -small js-apply-coupon" type="submit">Apply</button>
+                                    <button class="btn -small js-check" onclick="checkCoupon()">Check</button>
+                                    <button class="btn -small js-apply-coupon" onclick="applyCoupon()">Apply</button>
                                 </div>
-                            </form>
+                            </div>
                         </div>
                     </div>
                     <button class="btn js-btn-coupons" onclick="document.getElementById('js-check-coupon').style.display='block'">Coupons</button>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="subtotal__row">
                         <p class="discount__label">Discount</p>
-                        <p class="discount__value" th:text="${discountPercentage!=null}? ${discountedPrice}+'%': '0%'"/>
+                        <p class="discount__value" th:text="${discountPercentage!=null}? ${discountPercentage}+'%': '0%'"/>
                     </div>
                 </div>
                 <div class="total-container">
