--- a/src/main/resources/static/src/stylus/modules/checkout.styl
+++ b/src/main/resources/static/src/stylus/modules/checkout.styl
@@ -1,6 +1,7 @@
 .checkout {
 
     &__container {
+        position: relative;
         width: 60%;
         height: 90vh;
         padding: rem(14) rem(18);
@@ -28,9 +29,6 @@
         justify-content: space-between;
     }
 
-    &__id {
-    }
-
     &__date {
     }
 
@@ -50,8 +48,59 @@
     }
 
     &__list {
+        width: 85%;
+        margin: 0 auto;
+        padding: rem(4);
+        margin-bottom: rem(16);
     }
 
     &__item {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     } 
+
+    &__link {
+        position: absolute;
+        bottom: rem(20);
+        left: 50%;
+        transform: translateX( -50%);
+        text-transform: uppercase;
+        padding: rem(10) rem(20);
+        background: red;
+        color: white;
+        border: rem(1) solid red;
+        transition: transition-custom($property = all);
+
+        &:hover {
+            color: red;
+            background: transparent;
+        }
+    }
+
+    &__column {
+        width: 100%;
+        max-width: rem(370);
+        word-wrap: break-word;
+        overflow: hidden;
+        padding: rem(2);
+
+        &.-right {
+            max-width: rem(260);
+            display: flex;
+            justify-content: space-between;
+            text-align: right;
+        }
+    }
 }
+
+.list {
+
+    &__intro {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: rem(24);
+        margin-bottom: rem(10);
+    }
+}
+
