--- a/src/main/resources/static/src/stylus/modules/checkout.styl
+++ b/src/main/resources/static/src/stylus/modules/checkout.styl
@@ -21,6 +21,8 @@
     }
 
     &__info {
+        padding:rem(40) rem(10);
+        font-size: rem(16);
     }
 
     &__header {
@@ -42,9 +44,11 @@
     }
 
     &__initial-price {
+        font-size: rem(18);
     }
 
     &__final-price {
+        font-size: rem(20);
     }
 
     &__list {
