Fix image not uploading when adding product

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -62,6 +62,7 @@
     </div>
 </div>
 <div th:replace="fragments/footer :: footer" />
+<script th:src="@{/build/js/addProduct.js}"></script>
 </body>
 
 </html>
