remove scripts from footer

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -46,6 +46,7 @@
         </form>
     </div>
     <div th:replace="fragments/footer :: footer" />
+    <script th:src="@{/build/js/imageInput.js}"></script>
 </body>
 
 </html>
