--- a/src/main/resources/templates/sale.html
+++ b/src/main/resources/templates/sale.html
@@ -131,6 +131,8 @@
 
 
 <div th:replace="fragments/footer :: footer"/>
+<script th:src="@{/build/js/sale.js}"></script>
+<script th:src="@{/build/js/keypad.js}"></script>
 </body>
 
 </html>
