add cart button on dash

--- a/src/main/resources/static/src/stylus/common/defaults.styl
+++ b/src/main/resources/static/src/stylus/common/defaults.styl
@@ -179,3 +179,17 @@ a {
     font-size: rem(18);
   }
 }
+
+.btn-cart {
+
+  width: 4vw;
+  height: 8vh;
+  font-size: rem(42);
+  color: $color-8;
+  background: none;
+  border: none;
+  text-align: center;
+  padding-right: rem(10);
+  padding-bottom: rem(2);
+
+}
