--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -91,7 +91,7 @@
                                         <p class="price__label">Price</p>
                                         <p class="price__value" th:text="${product.price}" />
                                     </div>
-                                    <button class="btn"> AICI TRE SA FIE UN BUTON DE ADAUGA</button>
+                                    <button class="btn-cart fas fa-cart-plus"></button>
                                 </li>
                             </th:block>
                         </ul>
