--- a/src/main/resources/templates/sale.html
+++ b/src/main/resources/templates/sale.html
@@ -65,7 +65,7 @@
                                 <input class="modal__input" name="coupon-code" type="text" placeholder="Insert Coupon Code" required>
                                 <div class="modal__action-wrapper">
                                     <button class="btn -small js-check" onclick="checkCoupon()">Check</button>
-                                    <button class="btn -small js-apply-coupon" onclick="applyCoupon()">Apply</button>
+                                    <button class="btn -small -disabled js-apply-coupon" onclick="applyCoupon()" disabled>Apply</button>
                                 </div>
                             </div>
                         </div>
