add buttons hover state

--- a/src/main/resources/templates/sale.html
+++ b/src/main/resources/templates/sale.html
@@ -22,7 +22,7 @@
             <p class="price__label">Price</p>
             <p class="price__value">{{{price}}}</p>
         </div>
-        <button class="btn btn-delete far fa-trash-alt"></button>
+        <button class="btn btn-delete -trashcan far fa-trash-alt"></button>
     </li>
 </script>
 
@@ -51,7 +51,7 @@
                                     <p class="price__label">Price</p>
                                     <p class="price__value" th:text="${item.product.price}"/>
                                 </div>
-                                <button class="btn btn-delete far fa-trash-alt"></button>
+                                <button class="btn btn-delete -trashcan far fa-trash-alt"></button>
                             </li>
                         </th:block>
                     </ul>
