--- a/src/main/resources/static/src/stylus/common/defaults.styl
+++ b/src/main/resources/static/src/stylus/common/defaults.styl
@@ -62,6 +62,8 @@ a {
   color: white;
   background-color: $color-2;
   border: none;
+  cursor: pointer;
+  transition: transition-custom($property = all);
 
 
   &:focus {
@@ -82,6 +84,10 @@ a {
 
   &.-disabled {
     background: #666;
+
+    &:hover {
+      background: #666;
+    }
   }
 
   &.-tiny {
@@ -103,6 +109,10 @@ a {
         width: 13.7vw;
     }
   }
+
+  &:hover {
+    background-color: black;
+  }
 }
 
 .btn-minus {
@@ -114,6 +124,11 @@ a {
   font-size: rem(16);
   margin-right: rem(4);
   padding: 0;
+  cursor: pointer;
+
+  &:hover {
+    background: none;
+  }
 }
 
 .btn-plus {
@@ -125,6 +140,11 @@ a {
   font-size: rem(16);
   margin-left: rem(4);
   padding: 0;
+  cursor: pointer;
+
+  &:hover {
+    background: none;
+  }
 }
 
 .btn-signup {
@@ -137,9 +157,15 @@ a {
   color: white;
   font-size: rem(24);
   text-decoration: none;
+  cursor: pointer;
+  transition: transition-custom($property = all);
 
   &.-extraMargin {
     margin-bottom: rem(20);
+  }
+
+  &:hover {
+    background-color: black;
   }
 
 }
@@ -150,6 +176,8 @@ a {
   background: none;
   color: $color-7;
   padding: 0;
+  cursor: pointer;
+  transition: transition-custom($property = all);
 
   &.-small {
     width: 4vw;
@@ -158,6 +186,10 @@ a {
     font-size: rem(18);
     line-height: 0;
     border: rem(1) solid white;
+
+    &:hover {
+      background-color: red;
+    }
   }
 
   &.-huge {
@@ -165,7 +197,19 @@ a {
     color: white;
     background-color: $color-7;
     font-size: 1.8vh;
+
+    &:hover {
+      background-color: red;
+    }
   }
+
+   &.-trashcan {
+    &:hover {
+      background: none;
+      color: red;
+    }
+  }
+  
 }
 
 .btn-confirm {
@@ -174,6 +218,8 @@ a {
   background-color: $color-8;
   color: white;
   font-size: rem(24);
+  cursor: pointer;
+  transition: transition-custom($property = all);
 
   &.-extra {
     width: 100%;
@@ -181,6 +227,10 @@ a {
     padding: 0;
     border: rem(1) solid white;
     font-size: rem(18);
+  }
+
+  &:hover {
+    background-color: green;
   }
 }
 
@@ -195,5 +245,11 @@ a {
   text-align: center;
   padding-right: rem(10);
   padding-bottom: rem(2);
+  transition: transition-custom($property = color);
+  cursor: pointer;
+
+  &:hover{
+    color: green;
+  }
 
 }
