logout on navbar

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -16,7 +16,7 @@
             </li>
         </ul>
     </nav>
-    <a href="/login">
+    <a href="/logout">
         <div class="user__data">
             <div class="user__icon"></div>
             <p class="user__name">User</p>
